Added some extensions (eslint, prettier, spell checker)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,10 @@
     "customizations": {
         "vscode": {
             "extensions": [
-				"ms-vscode.live-server"
+				"ms-vscode.live-server",
+                "dbaeumer.vscode-eslint",
+                "esbenp.prettier-vscode",
+                "streetsidesoftware.code-spell-checker"
 			]
         }
     }
